# src/adapters/drivers/http/controllers/payment-controller.ts
@@ -1,8 +1,13 @@
 import {
+  BadRequestException,
   Body,
   Controller,
+  Headers,
   HttpCode,
+  HttpException,
+  HttpStatus,
   Post,
+  Req,
   UseInterceptors,
   UsePipes,
 } from '@nestjs/common';
@@ -21,6 +26,13 @@ import {
   CreatePaymentSessionProps,
   createPaymentSessionSchema,
 } from './validations/create-payment-session.validate';
+import Stripe from 'stripe';
+import { PrismaService } from '@adapters/drivens/infra/database/prisma/prisma.service';
+import { Public } from '@adapters/drivens/infra/auth/public';
+
+const stripe = new Stripe(process.env.STRIPE_SECRET_KEY!, {
+  apiVersion: '2025-05-28.basil',
+});
 
 @Controller('/payments')
 @ApiTags('Payment')
@@ -29,19 +41,21 @@ export class PaymentController {
   constructor(
     private readonly createCustomerUseCase: CreateCustomerUseCase,
     private readonly createPaymentSessionUseCase: CreatePaymentSessionUseCase,
+    private readonly prismaService: PrismaService,
   ) {}
 
   @Post('/customer')
   @HttpCode(200)
   @UsePipes(new ZodValidationPipe(createCustomerSchema))
   async createCustomer(@Body() body: CreateCustomerProps) {
-    const customer = await this.createCustomerUseCase.execute({
+    const result = await this.createCustomerUseCase.execute({
       email: body.email,
     });
-    console.log('customer', customer);
-
+    if (result.isLeft()) {
+      throw new BadRequestException(result.value.message);
+    }
     return {
-      result: null,
+      result: result.value.customer,
     };
   }
   @Post('/session')
@@ -53,6 +67,78 @@ export class PaymentController {
 
     return {
       result: session.value,
+    };
+  }
+  @Post('/webhooks/stripe')
+  @Public()
+  @HttpCode(200)
+  async handleStripeWebhook(
+    @Headers('stripe-signature') signature: string,
+    @Req() req: Request,
+  ) {
+    // const thinEvent = client.parseThinEvent(req.body, signature, webhookSecret);
+
+    const event = stripe.webhooks.constructEvent(
+      req.body as any,
+      signature,
+      process.env.STRIPE_WEBHOOK_SECRET!,
+    );
+    if (!event) {
+      console.error('Webhook signature verification failed.');
+      throw new BadRequestException(`Webhook Error: `);
+    }
+    // try {
+    //   event = stripe.webhooks.constructEvent(
+    //     req.body as any,
+    //     signature,
+    //     process.env.STRIPE_WEBHOOK_SECRET!,
+    //   );
+    // } catch (err) {
+    //   console.error('Webhook signature verification failed.', err.message);
+    //   throw new BadRequestException(`Webhook Error: ${err.message}`);
+    // }
+
+    // Lida com o evento
+    switch (event.type) {
+      case 'checkout.session.completed': {
+        const session = event.data.object as Stripe.Checkout.Session;
+        const sessionWithLineItems = await stripe.checkout.sessions.retrieve(
+          session.id,
+          { expand: ['line_items.data.price'] },
+        );
+
+        const priceId = sessionWithLineItems.line_items?.data[0]?.price?.id;
+
+        const customerEmail = session.customer_details?.email;
+
+        if (!customerEmail || !priceId) break;
+
+        // Buscar o plano usando o price_id
+        const plan = await this.prismaService.plan.findFirst({
+          where: { price_id: priceId }, // ajuste esse campo conforme seu model
+        });
+
+        if (!plan) {
+          console.warn(`Nenhum plano encontrado para price_id: ${priceId}`);
+          break;
+        }
+
+        // Atualiza o usuário
+        await this.prismaService.user.updateMany({
+          where: { email: customerEmail },
+          data: { plan_id: plan.id },
+        });
+
+        console.log(
+          `Plano atualizado para o usuário ${customerEmail}: ${plan.name}`,
+        );
+        break;
+      }
+    }
+    return {
+      result: {
+        received: true,
+      },
     };
   }
 }
